--- a/3 - HTML e CSS estrutura e tags/portfólio/style.css
+++ b/3 - HTML e CSS estrutura e tags/portfólio/style.css
@@ -40,31 +40,34 @@ body {
     color: var(--second);
     font-family: var(--font-p);
     text-decoration: none;
+    font-size: 1.25rem;
 }
 .cabecalho__btn:hover {
     text-decoration: underline;
 }
 
-main {
+.main {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     padding: 5% 15%;
+    gap: 60px;
 }
 
 .main__title {
-    font-size: 40px;
+    /* 16px = 1rem */
+    font-size: 3rem;
     font-family: var(--font-title);
 }
 
 .second__title {
-    font-size: 28px;
+    font-size: 2.5rem;
     font-family: var(--font-title);
 }
 
 .main__p {
-    font-size: 14px;
+    font-size: 1rem;
     font-family: var(--font-p);
 }
 
@@ -77,22 +80,23 @@ main {
     justify-content:space-around;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
+    gap: 20px;
 }
 
 .btn__1, .btn__2 {
     display: flex;
-    gap: 5px;
+    gap: 10px;
     justify-content: center;
     background-color: transparent;
-    width: 140px;
+    width: 50%;
     text-align: center;
     font-family: var(--font-p);
     border-radius: 10px;
     color: var(--font);
     border: 1px solid var(--second);
-    padding: 8px 0;
+    padding: 10px 0;
     text-decoration: none;
+    font-size: 1rem;
 }
 
 .btn__1:hover, .btn__2:hover {
@@ -104,21 +108,46 @@ main {
 }
 
 .esq__content {
-    width: 415px;
+    width: 50%;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 30px;
+}
+
+.dir__content {
+    width: 50%;
+    display: flex;
+    justify-content: center;
 }
 
 .rodape {
     color: var(--font);
     background-color: var(--second);
-    padding: 20px;
+    padding: 10px;
     font-family: var(--font-p);
     text-align: center;
+    font-size: 1rem;
     position: absolute;
     bottom: 0;
     width: 100%;
 }
 
-
+/* media queries */
+@media (max-width: 1150px) {
+    .main {
+        flex-direction: column-reverse;
+        padding: 5%;
+    }
+    .cabecalho {
+        padding: 5%;
+    }
+    .cabecalho__menu {
+        justify-content: center;
+    }
+    .esq__content {
+        width: auto;
+    }
+    .rodape {
+        position: relative;
+    }
+}
